Finished host-page; added averageScores and averageScore to listing model; working on basicSearch

--- a/web/src/stylesheets/abstracts/_variables.scss
+++ b/web/src/stylesheets/abstracts/_variables.scss
@@ -29,7 +29,8 @@ $muted-text-color: #757575;
 $muted-text-color-2: rgb(194, 194, 194);
 
 $highlight-hover-color: rgb(245, 245, 245);
-$avatar-background-color: rgba(230, 230, 230, 0.479);
+// $avatar-background-color: rgba(160, 160, 160, 0.479);
+$avatar-background-color: #00a7de33;
 
 /// Disabled text color
 /// @type Color
