--- a/web/src/stylesheets/pages/_TripPage.scss
+++ b/web/src/stylesheets/pages/_TripPage.scss
@@ -45,6 +45,11 @@
 		margin-left: auto;
 		margin-right: auto;
 		overflow-x: hidden;
+
+		--scrollbar-width: 0px;
+
+		&::-webkit-scrollbar {
+		}
 	}
 
 	&__header {
@@ -330,6 +335,7 @@
 				background: white;
 				padding: 2rem;
 				padding-bottom: 3rem;
+				overflow: hidden;
 				border-radius: 0.8rem;
 				border-bottom-right-radius: 0;
 				border-bottom-left-radius: 0;
