Completed SearchPageTopBar implementation; working on pagination and list items

--- a/web/src/stylesheets/main.scss
+++ b/web/src/stylesheets/main.scss
@@ -24,4 +24,4 @@
 
 // 6. Page-specific styles
 @import "pages/Listing", "pages/Landing", "pages/EntryPage", "pages/UserPage",
-	"pages/HostPage", "pages/TripsPage", "pages/TripPage";
+	"pages/HostPage", "pages/TripsPage", "pages/TripPage", "pages/SearchPage";
