--- a/web/src/stylesheets/pages/_SearchPage.scss
+++ b/web/src/stylesheets/pages/_SearchPage.scss
@@ -10,7 +10,14 @@
 		margin: 3rem 0;
 	}
 
+	.pipe-divider {
+		color: $muted-line-color;
+		font-size: 1.8rem;
+		margin-right: 1rem;
+	}
+
 	&__top-bar {
+		z-index: 10;
 		background-color: white;
 		position: fixed;
 		height: 6.4rem;
@@ -45,13 +52,15 @@
 				}
 
 				.date {
-					margin-right: 2rem;
+					margin-right: 1rem;
 					font-size: 1.4rem;
 					color: $muted-text-color;
 				}
 			}
 
 			&--edit-filter {
+				display: relative;
+				@include buttonSvgOutline;
 			}
 		}
 
@@ -108,11 +117,51 @@
 
 .SearchResultsItem {
 	font-weight: 400;
+	margin: 4rem 0;
+
+	&:first-child {
+		margin-top: 0;
+	}
 
 	&__image {
+		position: relative;
+		inset: 0px;
+		padding-top: 60%;
+		border-radius: 1.2rem;
+		overflow: hidden;
+
+		> .superhost {
+			position: absolute;
+			left: 0;
+			top: 0;
+			z-index: 1;
+			margin: 1rem;
+
+			> span {
+				background-color: white;
+				border-radius: 0.4rem;
+				padding: 0.5rem;
+				text-transform: uppercase;
+				font-size: 1.2rem;
+				letter-spacing: 0.05rem;
+				font-weight: 500;
+			}
+		}
+
+		> img {
+			position: absolute;
+			object-fit: cover;
+			object-position: 50% 50%;
+			inset: 0px;
+			width: 100%;
+			height: 100%;
+		}
 	}
 
 	&__details {
+		margin-top: 1rem;
+		font-size: 1.6rem;
+
 		> .score {
 			display: flex;
 			align-items: center;
@@ -138,16 +187,30 @@
 			}
 		}
 
-		> .type {
+		> .title {
+			width: 99%;
+			overflow: hidden;
 
+			> span {
+				white-space: nowrap;
+				text-overflow: ellipsis;
+				width: 100%;
+				display: block;
+				overflow: hidden;
+			}
 		}
 
-    > .price {
-      span {
-        &:first-of-type {
-          font-weight: 500;
-        }
-      }
-    }
+		> .price {
+			> .total-price {
+				font-size: 1.4rem;
+				text-decoration: underline;
+				color: $muted-text-color;
+			}
+			span {
+				&:first-of-type {
+					font-weight: 500;
+				}
+			}
+		}
 	}
 }
