--- a/web/src/stylesheets/abstracts/_mixins.scss
+++ b/web/src/stylesheets/abstracts/_mixins.scss
@@ -32,6 +32,19 @@
 	}
 }
 
+@mixin hover {
+	cursor: pointer;
+	border: 1px solid $outline-color;
+	box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px !important;
+	transition: box-shadow 0.2s cubic-bezier(0.35, 0, 0.65, 1) 0s !important;
+
+	&:hover,
+	&:focus-within {
+		box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px !important;
+		transition: box-shadow 0.2s cubic-bezier(0.35, 0, 0.65, 1) 0s !important;
+	}
+}
+
 @mixin focusOutline {
 	transition: box-shadow 0.2s ease 0s;
 
@@ -49,7 +62,7 @@
 @mixin buttonSvgOutline {
 	outline: none;
 	position: relative;
-	
+
 	&::before {
 		content: "";
 		display: block;
