--- a/web/src/stylesheets/pages/_UserPage.scss
+++ b/web/src/stylesheets/pages/_UserPage.scss
@@ -77,17 +77,10 @@
 			flex-direction: column;
 
 			& .ListingPreview {
-				box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
 				margin: 1rem 0;
 				border-radius: 0.8rem;
 				overflow: hidden;
-				transition: box-shadow 200ms;
-
-				&:hover,
-				&:focus-within {
-					transition: box-shadow 200ms;
-					box-shadow: 0 6px 16px rgba(0, 0, 0, 0.38);
-				}
+				@include hover;
 
 				&:first-child {
 					margin-top: 0.5rem;
