Added close and open animations for sections in FiltersEditMenu

--- a/web/src/stylesheets/main.scss
+++ b/web/src/stylesheets/main.scss
@@ -20,7 +20,7 @@
 	"components/ListingTypes.scss", "components/Inspirations.scss",
 	"components/MobileNavbar.scss", "components/FormSearch.scss",
 	"components/FormSearchMobile.scss", "components/ReviewItem.scss",
-	"components/HouseMarker.scss";
+	"components/HouseMarker.scss", "components/FiltersEditMenu.scss";
 
 // 6. Page-specific styles
 @import "pages/Listing", "pages/Landing", "pages/EntryPage", "pages/UserPage",
