--- a/web/src/stylesheets/components/SearchResultsPage/SearchResultsItem.scss
+++ b/web/src/stylesheets/components/SearchResultsPage/SearchResultsItem.scss
@@ -19,9 +19,9 @@
 			top: 0;
 			z-index: 1;
 			margin: 1rem;
-      
+
 			> span {
-        border: 1px solid $outline-color;
+				border: 1px solid $outline-color;
 				background-color: white;
 				border-radius: 0.4rem;
 				padding: 0.5rem;
@@ -46,7 +46,8 @@
 		margin-top: 1rem;
 		font-size: 1.6rem;
 
-		> .score {
+		> .score,
+		> .score-price > .score {
 			display: flex;
 			align-items: center;
 
@@ -84,7 +85,8 @@
 			}
 		}
 
-		> .price {
+		> .price,
+		> .score-price > .price {
 			> .total-price {
 				font-size: 1.4rem;
 				text-decoration: underline;
@@ -96,32 +98,77 @@
 				}
 			}
 		}
+
+		&--desktop {
+			> .divider {
+				height: 0.1rem;
+				width: 5rem;
+				background-color: $muted-line-color;
+				margin: 1rem 0;
+			}
+
+			> .title {
+				margin-top: 0.25rem;
+			}
+
+			> .type,
+			> .details,
+			> .amenities {
+				white-space: nowrap;
+				font-size: 1.4rem;
+				color: $muted-text-color;
+			}
+		}
 	}
 }
 
 @media screen and (min-width: 744px) {
-  .SearchResultsItem {
-    margin: 0;
-    padding: 3rem 0;
-    border-top: 1px solid $muted-line-color;
+	.SearchResultsItem {
+		margin: 0;
+		padding: 2.5rem 0;
+		border-top: 1px solid $muted-line-color;
 
-    &:last-child {
-      border-bottom: 1px solid $muted-line-color;
-    }
+		&:last-child {
+			border-bottom: 1px solid $muted-line-color;
+		}
 
-    .SearchResultsItem-container {
-      display: flex;
-    }
+		.SearchResultsItem-container {
+			display: flex;
+		}
 
-    &__image {
-      padding-top: 0;
-      height: 200px;
-      width: 300px;
-    }
+		&__image {
+			padding-top: 0;
+			height: 20rem;
+			width: 30rem;
+			flex-shrink: 0;
+		}
 
-    &__details {
-      margin: 0;
-      padding: 0 2rem;
-    }
-  }
+		&__details {
+			display: flex;
+			flex-direction: column;
+			margin: 0;
+			padding-left: 2rem;
+			overflow: hidden;
+			flex-grow: 1;
+
+			.score-price {
+				margin-top: auto;
+				display: flex;
+				align-items: flex-end;
+				justify-content: space-between;
+
+				> .price {
+					text-align: right;
+				}
+			}
+		}
+	}
+}
+
+@media (min-width: 1128px) {
+	.SearchResultsItem {
+		&__details {
+			flex-shrink: 1;
+		}
+	}
 }
