--- a/web/src/stylesheets/pages/_SearchPage.scss
+++ b/web/src/stylesheets/pages/_SearchPage.scss
@@ -3,11 +3,13 @@
 		padding: 3rem 2rem;
 	}
 
-	.divider {
-		height: 0.1rem;
-		width: 100%;
-		background-color: $muted-line-color;
-		margin: 3rem 0;
+	.google-maps-container {
+		> .map {
+			position: sticky;
+			top: 8rem;
+			background-color: rgb(201, 201, 201);
+			height: calc(100vh - 8rem);
+		}
 	}
 
 	&__results-details {
@@ -50,6 +52,13 @@
 
 	&__results {
 		&__list {
+			> .divider {
+				height: 0.1rem;
+				width: 100%;
+				background-color: $muted-line-color;
+				margin: 3rem 0;
+			}
+
 			.no-results {
 				height: 80vh;
 
@@ -275,8 +284,6 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	// overflow-y: auto;
-	// overflow-x: hidden;
 	display: none;
 
 	&[aria-hidden="false"] {
@@ -302,18 +309,18 @@
 }
 
 @media (min-width: 744px) {
-	.Navbar {
-		&__container {
-			padding: 0 2.4rem;
-		}
-	}
-
 	.SearchPage-container {
 		padding: 0 2.4rem;
 		margin-top: 5rem;
 	}
 
 	.SearchPage {
+		.Navbar {
+			&__container {
+				padding: 0 2.4rem;
+			}
+		}
+
 		&__results {
 			.SearchResultsPagination {
 				display: flex;
@@ -331,6 +338,42 @@
 						color: $muted-text-color;
 					}
 				}
+			}
+		}
+	}
+}
+
+@media (min-width: 1128px) {
+	.SearchPage-outer {
+		display: flex;
+
+		.SearchPage-container {
+			width: calc(100% - 50rem);
+			max-width: 84rem;
+		}
+
+		.google-maps-container {
+			width: 100%;
+			background-color: grey;
+		}
+	}
+}
+
+@media (min-width: 1440px) {
+	.SearchPage-outer {
+		.google-maps-container {
+			background-color: grey;
+		}
+	}
+}
+
+@media (min-width: 1780px) {
+	.SearchPage {
+		.Navbar {
+			&__container {
+				max-width: unset;
+				margin: 0;
+				padding: 0 2.4rem;
 			}
 		}
 	}
