--- a/web/src/stylesheets/components/Navbar/_FormSearch.scss
+++ b/web/src/stylesheets/components/Navbar/_FormSearch.scss
@@ -2,7 +2,6 @@
 	height: 100%;
 	width: 100%;
 	border-radius: 3.2rem;
-	// overflow: hidden;
 
 	&__container {
 		display: flex;
@@ -35,6 +34,12 @@
 			padding: 0 1rem;
 			height: 100%;
 			flex: 1 0 0rem;
+
+			&.error {
+				> div label {
+					color: red;
+				}
+			}
 
 			&.focused {
 				background-color: white !important;
