--- a/web/src/stylesheets/components/Navbar/_Navbar.scss
+++ b/web/src/stylesheets/components/Navbar/_Navbar.scss
@@ -86,6 +86,10 @@
 				rgba(0, 0, 0, 0.05) 0px 4px 12px;
 			border-radius: 4rem;
 
+			&--search-page {
+				position: relative;
+			}
+
 			& > div {
 				padding: 0 2rem;
 				font-size: 1.4rem;
@@ -113,10 +117,10 @@
 		// when the Search component is active, but not at the top
 		&::after {
 			transform-origin: 50% 0%;
-			transition-duration: 250ms;
+			transition-duration: 150ms;
 			transition-property: opacity, background-color, -ms-transform,
 				-webkit-transform, transform;
-			transition-timing-function: ease;
+			transition-timing-function: ease-in-out;
 			background: rgb(255, 255, 255);
 			content: "";
 			height: 100%;
@@ -220,9 +224,8 @@
 				}
 
 				&__link {
-					&>a {
-						
-						&>div{
+					& > a {
+						& > div {
 							width: 100%;
 							height: 100%;
 							display: flex;
@@ -283,6 +286,10 @@
 	margin-left: calc(min(85rem, 90%) / 2 * -1);
 	top: 14rem;
 
+	&--search-page {
+		
+	}
+
 	&__categories {
 		position: absolute;
 		width: 100%;
@@ -328,63 +335,66 @@
 
 .component {
 	&-enter {
-		top: 40px;
-		opacity: 0.5;
-		transform-origin: 50% -13%;
-		transform: scaleX(0.3);
+		top: 60px;
+		opacity: 0;
+		transform-origin: 12% -108%;
+		transform: scaleX(0.7);
 	}
 
 	&-enter-active {
-		transform-origin: 50% -13%;
+		transform-origin: 12% -108%;
 		top: 140px;
 		opacity: 1;
 		transform: scaleX(1);
-		transition: 150ms ease;
+		transition: 150ms ease-in-out;
 	}
 
 	&-exit {
 		top: 140px;
 		transform: scaleX(1);
-		transform-origin: 50% -13%;
+		transform-origin: 5% -200%;
 		opacity: 1;
 	}
 
 	&-exit-active {
-		transform-origin: 50% -13%;
-		transform: scaleX(0.3);
-		top: 40px;
+		transform-origin: 5% -200%;
+		transform: scaleX(0.7);
+		top: 60px;
 		opacity: 0;
-		transition: 150ms ease;
+		transition: 150ms ease-in-out;
 	}
 }
 
 .button {
 	&-enter {
-		transform-origin: 50% -13%;
+		transform-origin: 13% -73%;
 		top: 90px;
 		opacity: 0;
-		transform: scaleX(2);
+		transform: scaleX(1.75);
 	}
 
 	&-enter-active {
+		transform-origin: 13% -73%;
 		top: 0px;
 		opacity: 1;
 		transform: scaleX(1);
-		transition: 150ms ease;
+		transition: 150ms ease-in-out;
 	}
 
 	&-exit {
-		transform-origin: 50% -13%;
+		transform-origin: 13% -55%;
 		transform: scaleX(1);
 		top: 0px;
 		opacity: 1;
 	}
 
 	&-exit-active {
-		transform: scaleX(2);
+		transform-origin: 13% -55%;
+
+		transform: scaleX(1.75);
 		top: 90px;
 		opacity: 0;
-		transition: 150ms ease;
+		transition: 150ms ease-in-out;
 	}
 }
 
@@ -414,9 +424,6 @@
 		}
 
 		&__search {
-			&__button {
-			}
-
 			&__component {
 				top: 8.65rem;
 
@@ -436,7 +443,7 @@
 	.component {
 		&-enter {
 			top: 40px;
-			opacity: 0.5;
+			opacity: 0;
 			transform-origin: 50% -13%;
 			transform: scaleX(0.3);
 		}
@@ -446,7 +453,7 @@
 			top: 86.5px;
 			opacity: 1;
 			transform: scaleX(1);
-			transition: 150ms ease;
+			transition: 150ms ease-in-out;
 		}
 
 		&-exit {
@@ -461,7 +468,7 @@
 			transform: scaleX(0.3);
 			top: 40px;
 			opacity: 0;
-			transition: 150ms ease;
+			transition: 150ms ease-in-out;
 		}
 	}
 
@@ -477,7 +484,7 @@
 			top: 0px;
 			opacity: 1;
 			transform: scaleX(1);
-			transition: 150ms ease;
+			transition: 150ms ease-in-out;
 		}
 
 		&-exit {
@@ -491,7 +498,7 @@
 			transform: scaleX(2);
 			top: 40px;
 			opacity: 0;
-			transition: 150ms ease;
+			transition: 150ms ease-in-out;
 		}
 	}
 }
