--- a/web/src/stylesheets/layout/_footer.scss
+++ b/web/src/stylesheets/layout/_footer.scss
@@ -88,7 +88,7 @@
 
 // Used for footer elements outside of the landing page
 .Footer-container {
-	padding-top: 3.2rem;
+	padding-top: 7.2rem;
 	padding-bottom: 2.4rem;
 	background-color: #f7f7f7;
 	border-top: 1px solid #dddddd;
@@ -162,7 +162,7 @@
 
 @media (min-width: 1780px) {
 	.Footer {
-		max-width: 1760px !important;
+		max-width: 1760px;
 		margin-left: auto !important;
 		margin-right: auto !important;
 	}
