--- a/web/src/stylesheets/main.scss
+++ b/web/src/stylesheets/main.scss
@@ -13,15 +13,12 @@
 @import "layout/Footer";
 
 // 5. Components
-@import "components/EntryForm/", "components/SearchResultsPage/",
-	"components/LoadingButton", "components/EntryForm/",
+@import "components/EntryForm/", "components/SearchResultsList/",
+	"components/Navbar/", "components/LoadingButton", "components/EntryForm/",
 	"components/PasswordHints.scss", "components/Modal.scss",
-	"components/Navbar.scss", "components/MobileSearch.scss",
 	"components/Destinations.scss", "components/ListingTypes.scss",
-	"components/Inspirations.scss", "components/MobileNavbar.scss",
-	"components/FormSearch.scss", "components/FormSearchMobile.scss",
-	"components/ReviewItem.scss", "components/HouseMarker.scss",
-	"components/FiltersEditMenu.scss";
+	"components/Inspirations.scss", "components/ReviewItem.scss",
+	"components/HouseMarker.scss", "components/FiltersEditMenu.scss";
 
 // 6. Page-specific styles
 @import "pages/Listing", "pages/Landing", "pages/EntryPage", "pages/UserPage",
