--- a/web/src/stylesheets/pages/_Landing.scss
+++ b/web/src/stylesheets/pages/_Landing.scss
@@ -163,7 +163,8 @@
 	}
 
 	&__footer {
-		padding-top: 3.2rem;
+		margin-top: 2.4rem;
+		padding-top: 7.2rem;
 		padding-bottom: 2.4rem;
 		background-color: #f7f7f7;
 		border-top: 1px solid #dddddd;
