Hooked reducerState change onto SearchPage (desktop) search bar changes

--- a/web/src/stylesheets/components/Navbar/_FormSearch.scss
+++ b/web/src/stylesheets/components/Navbar/_FormSearch.scss
@@ -240,4 +240,7 @@ button.rdrDayDisabled {
 			display: block;
 		}
 	}
+	.SearchForm__container__input-container__input {
+		margin-right: 7rem;
+	}
 }
