--- a/web/src/stylesheets/components/_FiltersEditMenu.scss
+++ b/web/src/stylesheets/components/_FiltersEditMenu.scss
@@ -346,7 +346,7 @@
 .edit-menu {
 	position: fixed;
 	z-index: 100;
-	background-color: white;
+	background-color: rgba(0, 0, 0, 0.344);
 	top: 0;
 	left: 0;
 	right: 0;
@@ -377,18 +377,21 @@
 
 @media screen and (min-width: 744px) {
 	.edit-menu {
-		position: absolute;
-		left: 50%;
-		top: 50%;
-		transform: translate(-50%, -50%);
-		height: 74rem;
-		width: 68rem;
-		border-radius: 1.2rem;
-		overflow: hidden;
-		border: 1px solid black;
-
 		.FiltersEditMenu {
-			height: 100%;
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+			height: 80vh;
+			width: 68rem;
+			border-radius: 1.2rem;
+			box-shadow: rgba(0, 0, 0, 0.28) 0px 8px 28px !important;
+			overflow: hidden;
+
+			&__sections {
+				overflow-y: scroll;
+				height: 100%;
+			}
 		}
 	}
 }
