--- a/web/src/stylesheets/layout/_footer.scss
+++ b/web/src/stylesheets/layout/_footer.scss
@@ -88,8 +88,9 @@
 
 // Used for footer elements outside of the landing page
 .Footer-container {
-	padding-top: 7.2rem;
-	padding-bottom: 2.4rem;
+	margin-top: 2.4rem;
+	padding-top: 4.8rem;
+	padding-bottom: 4.8rem;
 	background-color: #f7f7f7;
 	border-top: 1px solid #dddddd;
 }
