--- a/web/src/stylesheets/components/MapMarkers/_PriceMarker.scss
+++ b/web/src/stylesheets/components/MapMarkers/_PriceMarker.scss
@@ -1,5 +1,5 @@
 .PriceMarker {
-  position: relative;
+	position: relative;
 	transform: translate(-50%, -100%);
 	width: fit-content;
 	height: fit-content;
@@ -20,7 +20,7 @@
 	&:hover {
 		transform: translate(-50%, -100%) scale(1.1);
 		transition: transform 200ms;
-    z-index: 1;
+		z-index: 1;
 	}
 
 	&[aria-selected="true"] {
@@ -33,17 +33,28 @@
 	}
 
 	&__details {
+		pointer-events: auto;
+		cursor: pointer;
 		position: absolute;
-		top: 0;
+		top: 3rem;
 		left: 50%;
 		transform: translateX(-50%);
-		height: 300px;
-		width: 100px;
+		height: 250px;
+		width: 225px;
 		background-color: white;
 		display: block;
 
 		&[aria-hidden="true"] {
 			display: none;
 		}
+	}
+}
+
+.PriceMarker__details {
+	overflow: hidden;
+
+	.PictureCarousel {
+		z-index: 5;
+		height: 50%;
 	}
 }
