--- a/web/src/stylesheets/components/SearchResultsList/_PictureCarousel.scss
+++ b/web/src/stylesheets/components/SearchResultsList/_PictureCarousel.scss
@@ -1,5 +1,6 @@
 .PictureCarousel {
 	height: 100%;
+	position: relative;
 
 	&__button {
 		opacity: 0;
@@ -106,7 +107,7 @@
 	}
 
 	100% {
-		left: 300px;
+		left: 100%;
 	}
 }
 
@@ -116,6 +117,6 @@
 	}
 
 	100% {
-		right: 300px;
+		right: 100%;
 	}
 }
