--- a/web/src/stylesheets/main.scss
+++ b/web/src/stylesheets/main.scss
@@ -15,11 +15,13 @@
 // 5. Components
 @import "components/EntryForm/", "components/SearchResultsList/",
 	"components/Navbar/", "components/LoadingButton", "components/EntryForm/",
-	"components/MapMarkers/", "components/PasswordHints.scss",
-	"components/Modal.scss", "components/Destinations.scss",
-	"components/ListingTypes.scss", "components/Inspirations.scss",
-	"components/ReviewItem.scss", "components/FiltersEditMenu.scss";
+	"components/MapMarkers/", "components/ListingPageComponents/",
+	"components/PasswordHints.scss", "components/Modal.scss",
+	"components/Destinations.scss", "components/ListingTypes.scss",
+	"components/Inspirations.scss", "components/ReviewItem.scss",
+	"components/FiltersEditMenu.scss";
 
 // 6. Page-specific styles
-@import "pages/Listing", "pages/Landing", "pages/EntryPage", "pages/UserPage",
-	"pages/HostPage", "pages/TripsPage", "pages/TripPage", "pages/SearchPage";
+@import "pages/ListingPage", "pages/LandingPage", "pages/EntryPage",
+	"pages/UserPage", "pages/HostPage", "pages/TripsPage", "pages/TripPage",
+	"pages/SearchPage";
