Added listing description

--- a/web/src/stylesheets/components/ListingPageComponents/_index.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_index.scss
@@ -1,2 +1,2 @@
 @import "./ListingMobileNav", "./ListingCarousel", "./ListingTitle",
-	"./ListingDetails", "./ListingHighlights";
+	"./ListingDetails", "./ListingHighlights", "./ListingListingDescription";
