--- a/web/src/stylesheets/pages/_ListingPage.scss
+++ b/web/src/stylesheets/pages/_ListingPage.scss
@@ -4,7 +4,8 @@
 	&__nav,
 	&__basics__title,
 	&__content__details,
-  &__content__highlights {
+  &__content__highlights,
+  &__content__listing-description {
 		padding: 0 var(--padding);
 	}
 
