--- a/web/src/stylesheets/components/ListingPageComponents/_index.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_index.scss
@@ -1,2 +1,3 @@
 @import "./ListingMobileNav", "./ListingCarousel", "./ListingTitle",
-	"./ListingDetails", "./ListingHighlights", "./ListingListingDescription";
+	"./ListingDetails", "./ListingHighlights", "./ListingListingDescription",
+	"./ListingAmenities", "./ListingMap", "./ListingReservation";
