--- a/web/src/stylesheets/components/_FiltersEditMenu.scss
+++ b/web/src/stylesheets/components/_FiltersEditMenu.scss
@@ -376,6 +376,7 @@
 	position: fixed;
 	z-index: 100;
 	// background-color: rgba(0, 0, 0, 0.344);
+	background-color: white;
 	top: 0;
 	left: 0;
 	right: 0;
