--- a/web/src/stylesheets/pages/_ListingPage.scss
+++ b/web/src/stylesheets/pages/_ListingPage.scss
@@ -64,6 +64,12 @@
 
 @media screen and (min-width: 744px) {
 	.ListingPage {
+		--padding: 4rem;
+		
+		&__nav {
+			padding: 0;
+		}
+
 		&__content {
 			display: flex;
 		}
