--- a/web/src/stylesheets/components/ListingPageComponents/_index.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_index.scss
@@ -1,3 +1,4 @@
 @import "./ListingMobileNav", "./ListingCarousel", "./ListingTitle",
 	"./ListingDetails", "./ListingHighlights", "./ListingListingDescription",
-	"./ListingAmenities", "./ListingMap", "./ListingReservation";
+	"./ListingAmenities", "./ListingMap", "./ListingReservation",
+	"./ListingReviews";
